# linux_sp

./: CMakeLists.txt
include/: memory_buffer.h  processes.h  threads_banking.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/memory_buffer/: CMakeLists.txt  mem_buffer.c  mem_buffer_tmp.c
src/lib/processes/: CMakeLists.txt  process_execvp.c
src/lib/threads/: CMakeLists.txt  banking.c
src/rt/: 01_simple_threads.c  02_inc_thread.c  03_process_wSemaphores.c  04_simple_thread_affinity.c  05_rt_pthread.c  06_rt_pthread_affinity.c  AS_01_pthread.c  CMakeLists.txt  RM_LUB.md
