#******************************************************************************
#*Copyright (C) 2023 by Salvador Z                                            *
#*                                                                            *
#*****************************************************************************/
#*
#*@author Salvador Z
#*@brief CMakeLists file to add executable targets
#*
add_executable(01_simple_threads 01_simple_threads.c)
add_executable(02_inc_thread 02_inc_thread.c)
add_executable(03_process_wSemaphores 03_process_wSemaphores.c)
add_executable(04_simple_thread_affinity 04_simple_thread_affinity.c)
add_executable(AS_01_pthread AS_01_pthread.c)
add_executable(05_rt_pthread 05_rt_pthread.c)
add_executable(06_rt_pthread_affinity 06_rt_pthread_affinity.c)
